--- a/public/index.html
+++ b/public/index.html
@@ -142,11 +142,19 @@
 
         <div class="chat-messages" id="chatMessages">
             <div class="message bot-message">
-                <div class="message-avatar bot-avatar">🤖</div>
-                <div class="message-content">
-                    <p class="message-text">👋 Hello! I'm MIDMES AI assistant. Try asking about: services, pricing, contact, website design, or SEO!</p>
-                    <span class="message-time">Just now</span>
-                </div>
+    <div class="message-avatar bot-avatar">🤖</div>
+    <div class="message-content">
+        <p class="message-text">👋 <strong>MIDMES Digital Marketing Assistant</strong><br><br>
+        I specialize in:<br>
+        🌐 Web Design & Development<br>
+        🔍 SEO & Google Ranking<br>
+        📱 Social Media Management<br>
+        📢 Digital Advertising<br>
+        🎨 Branding & Identity<br><br>
+        Ask me about these services!</p>
+        <span class="message-time">Just now</span>
+    </div>
+</div>
             </div>
         </div>
 
